B-F Sandbox Full-Backup/src/objects/Internal_Order__c.object
<CustomObject>
    <description>NPA Rollout: Object for storing Internal Orders</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>NPA Rollout: Used to store description of the Internal Order</description>
        <externalId>true</externalId>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Order_Number__c</fullName>
        <description>NPA Rollout: Used to store the Internal Order number since the Name field cannot be made unique</description>
        <externalId>true</externalId>
        <label>Internal Order Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Order_Type__c</fullName>
        <description>NPA Rollout: Used to store the Internal Order type.</description>
        <label>Internal Order Type</label>
        <picklist>
            <picklistValues>
                <fullName>ZBSP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Internal Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Internal_Order_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Internal Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Internal Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>